--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "zendframework/zend-developer-tools": "dev-master",
         "bjyoungblood/bjy-profiler": "dev-master",
         "evandotpro/edp-module-layouts": "dev-master",
-        "zf-commons/zfc-base": "v0.1.2",
+        "zf-commons/zfc-base": "v0.1.2"
     },
     "require-dev": {
         "php": ">=5.4.7",
