--- a/module/Application/test/phpunit.xml.dist
+++ b/module/Application/test/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="Bootstrap.php">
+<phpunit colors="true" bootstrap="Bootstrap.php">
     <testsuites>
         <testsuite name="onlinesurvey">
             <directory>./ApplicationTest</directory>
