--- a/module/Contact/test/TestConfig.php.dist
+++ b/module/Contact/test/TestConfig.php.dist
@@ -1,6 +1,8 @@
 <?php
 return array(
     'modules' => array(
+        'DoctrineModule',
+        'DoctrineORMModule',
         'Application',
         'Contact',
     ),
